src/components/Header/Header.css
.page-header {
  position: sticky;
  top: 0;
  border-bottom: 0.5px solid #d3d3d3;
  background-color: #fff;
  z-index: 2;
}

.header-wrapper {
  display: flex;
  flex-direction: column;
  /* justify-content: space-between; */
  align-items: center;

  padding: 2rem;
  max-width: 1280px;
  margin-inline: auto;
}

.page-title {
  cursor: pointer;
  font-family: var(--h1-font);
  font-size: 3.2rem;
  line-height: 1.1;
}

.page-subtitle {
  font-size: 1.8rem;
  font-weight: 400;
}

